# crystaltoolkit

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pyup.yml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Pipfile  README.md  SECURITY.md  _validate_init.py  all_mpids.json  app.py  code-of-conduct.md  crystal.json  dashboard.py  default_structure.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements.txt  setup.cfg  setup.py  structure.py  structure_vis_mp.py  task_ids_on_load.json  usage.py  usage_refactor.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  docs.yml  issue-metrics.yml  pull-request.yml  pullrequest.yml  pytest-docs.yml  pytest.yml  pytest_docs.yml  release.yml  upgrade-dependencies.yml  url-check.yml
assets/: all.min.css  iframeResizer.contentWindow.min.js  styles.css  styles.css.map  styles.mpembed.css  styles.mpembed.css.map  styles.mpembed.scss  styles.scss
crystal_toolkit/: GraphComponent.py  JSONViewComponent.py  Simple3DScene.py  Simple3DSceneComponent.py  __init__.py  _imports_.py  _version.py  crystal_toolkit.min.js  defaults.json  defaults.py  metadata.json  mpid_cache.json  msonable.py  package.json  settings.py
crystal_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crystal_toolkit/apps/: app_metadata.yaml  constants.py  help.yaml  main.py  main_app.py
crystal_toolkit/cli/: cli.py
crystal_toolkit/components/: __init__.py  bandstructure.py  bonding_graph.py  bs.py  cohp.py  core.py  diffraction.py  diffraction_tem.py  download.py  error_msg.py  favorites.py  fermi_surface.py  grainboundary.py  json.py  literature.py  localenv.py  magnetism.py  messageAIO.py  phase_diagram.py  phonon.py  pourbaix.py  reverse_pourbaix.py  robocrys.py  search.py  structure.py  submit_snl.py  symmetry.py  tasks.py  upload.py  xas.py  xrd.py
crystal_toolkit/core/: ElementColorSchemes.yaml  __init__.py  defaults.js  defaults.json  jupyter.py  legend.py  mpapp.py  mpcomponent.py  panelcomponent.py  plugin.py  renderable.py  scene.py
crystal_toolkit/helpers/: __init__.py  asymptote_export.py  asymptote_renderer.py  dash_renderer.py  inputs.py  jupyter.py  jupyter_dash_renderer.py  layouts.py  mprester.py  povray_renderer.py  pretty_labels.py  pythreejs_adapter.py  pythreejs_renderer.py  scene.py  utils.py  view.py
crystal_toolkit/renderables/: ElementColorSchemes.yaml  __init__.py  defects.py  lattice.py  legend.py  migration_graph.py  migrationgraph.py  molecule.py  moleculegraph.py  phasediagram.py  site.py  sitecollection.py  structure.py  structuregraph.py  volumetric.py
demo/: Demo.react.js
docs/: .buildinfo  CNAME  Makefile  changelog.md  components.html  conf.py  first_component.html  first_web_app.html  genindex.html  helpers.html  index.html  introduction.html  jupyter.html  mp_app.html  objects.inv  package.json  py-modindex.html  readme.md  search.html  searchindex.js  troubleshooting.html
docs/.vuepress/: config.js
docs/_modules/: abc.html  crystal_toolkit.html  flask_caching.html  index.html
docs/_sources/: components.rst.txt  first_component.rst.txt  first_web_app.rst.txt  helpers.rst.txt  index.rst.txt  introduction.rst.txt  jupyter.rst.txt  mp_app.rst.txt  troubleshooting.rst.txt
docs/components/: dash_components.html  structuremoleculecomponent.html
docs/source/: crystal_toolkit.GraphComponent.html  crystal_toolkit.JSONViewComponent.html  crystal_toolkit.Simple3DSceneComponent.html  crystal_toolkit.components.bandstructure.html  crystal_toolkit.components.bonding_graph.html  crystal_toolkit.components.bs.html  crystal_toolkit.components.diffraction.html  crystal_toolkit.components.download.html  crystal_toolkit.components.favorites.html  crystal_toolkit.components.grainboundary.html  crystal_toolkit.components.html  crystal_toolkit.components.json.html  crystal_toolkit.components.literature.html  crystal_toolkit.components.localenv.html  crystal_toolkit.components.magnetism.html  crystal_toolkit.components.phase_diagram.html  crystal_toolkit.components.pourbaix.html  crystal_toolkit.components.robocrys.html  crystal_toolkit.components.search.html  crystal_toolkit.components.structure.html  crystal_toolkit.components.submit_snl.html  crystal_toolkit.components.summary.html  crystal_toolkit.components.symmetry.html  crystal_toolkit.components.transformations.autooxistatedecoration.html  crystal_toolkit.components.transformations.core.html  crystal_toolkit.components.transformations.cubic.html  crystal_toolkit.components.transformations.grainboundary.html  crystal_toolkit.components.transformations.html  crystal_toolkit.components.transformations.rattle.html  (+39 more)
docs_rst/: CNAME  Makefile  components.rst  conf.py  first_component.rst  first_web_app.rst  index.md  index.rst  introduction.rst  jupyter.md  jupyter.rst  modernization.rst  mp_app.rst  troubleshooting.rst
example_apps/: relaxation_trajectory.py
example_files/: example_structure.json
jupyterlab-extension/: .gitignore  LICENSE  MANIFEST.in  README.md  install.json  package-lock.json  package.json  setup.py  tsconfig.json  tsconfig.tsbuildinfo
mp_dash_components/: __init__.py  bundle.js  metadata.json
mp_viewer/: __init__.py  bundle.js  metadata.json
requirements/: macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
src/: index.js
tests/: conftest.py  requirements.txt  test_asy.py  test_chgcar.py  test_example_apps.py  test_structure.py  test_usage.py  test_utils.py  test_volumetric.py  troubleshooting.md
usage/: dev.ipynb  usage_pourbaix_component.py
(+269 files in other folders)
